# LynDevicePlugin

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.Dockerfile  build.sh  example.yml  go.mod  go.sum  load_amd64.sh  load_arm64.sh  readme.md  rust.Dockerfile  save.sh
LynDevicePlugin/: Chart.yaml  README.md  values.yaml
LynDevicePlugin/templates/: apu_feature_discovery.yml  daemonset.yaml  device_plugin.yaml  device_plugin_hs110_k8s.yaml  device_plugin_hs110_kubeedge.yaml  exporter.yaml  exporter_hs110_k8s.yaml  exporter_hs110_kubeedge.yaml  exporter_service.yaml  exporter_service_monitor.yaml  namespace.yaml
apu-feature-discovery/: Dockerfile  Makefile  README.md  apu-feature-discovery-daemonset.yaml  go.mod  main.go  main_test.go  pciutil.go  pciutil_test.go
apu-feature-discovery/apihelper/: apihelpers.go  k8shelpers.go  labelhelpers.go
docs/: 调度策略和芯片类型区分调研.md  调研.md  需求.md
lyndriver-rs/: Cargo.toml
lyndriver-rs/benches/: smi.rs
lyndriver-rs/src/: drv.rs  errors.rs  ffi_convert.rs  lib.rs  smi.rs
lynsmi/: Cargo.toml
lynsmi-go/: smi_c.go  smi_c_test.go
lynsmi-go/smi_c/: smi_c.go  smi_c_test.go
lynsmi-interface/: smi.go  smi_json_decode_test.go
lynsmi-rs/: Cargo.toml
lynsmi-rs/benches/: benchmark.rs
lynsmi-rs/src/: errors.rs  lib.rs  library.rs
lynsmi-service/: Cargo.toml
lynsmi-service-client-go/: smi.go  smi_test.go
lynsmi-service/examples/: client.rs
lynsmi-service/src/: connection.rs  drv_exception.rs  lib.rs  main.rs  watcher.rs
lynsmi/benches/: benchmark.rs
lynsmi/src/: errors.rs  lib.rs  library.rs
lynxi-device-chart/: .helmignore  Chart.yaml  README.md  values.yaml
lynxi-device-chart/static/: lynxi-device-plugin.yaml
lynxi-device-chart/templates/: device_plugin.yaml  exporter.yaml  exporter_service.yaml
lynxi-device-discovery/: Cargo.toml
lynxi-device-discovery/src/: main.rs
lynxi-device-plugin/: DaemonSet.yml  Makefile  main.go  readme.md
lynxi-device-plugin/docs/: arch.pu
lynxi-device-plugin/examples/: readme.md
lynxi-device-plugin/server/: server.go
lynxi-device-plugin/service/: hp280_allocation_service.go  service.go  service_test.go  types.go
lynxi-exporter/: Dockerfile  Makefile  README.md  main.go
lynxi-exporter/deploy/: DaemonSet.yml  Service.yml  ServiceMonitor.yml
lynxi-k8s-device-plugin/: DaemonSet.yml  Makefile  main.go  readme.md
scripts/: build.sh  example.yml  go.Dockerfile  load.sh  rust.Dockerfile  save.sh
smi/: smi.go  smi_c.go  smi_c_test.go
smi/smi_c/: smi_c.go  (+1 more)
(+32 files in other folders)
