[package]
name = "lynsmi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.0"
thiserror = "1.0.40"
serde = { version = "1.0.164", features = ["derive"] }
regex = "1.8.4"

[dev-dependencies]
rayon = "1.7.0"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
