[package]
name = "lynsmi-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
futures-util = { version = "0.3.28", features = ["sink"] }
lynsmi = { version = "0.1.0", path = "../lynsmi-rs" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = [ "macros", "net", "rt-multi-thread", "sync", "io-util" ] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
