[package]
name = "lynsmi-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
lyndriver = { version = "0.1.0", path = "../lyndriver-rs" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
openssl = { version = "0.10.64", features = ["vendored"] }
lazy_static = "1.4.0"
