[package]
name = "lynxi-device-discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
lynsmi = { path = "../lynsmi-rs" }
lynsmi-service = { path = "../lynsmi-service" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio-stream = "0.1.14"
